minor fixes to header menu button on mobile :nail_care:

--- a/assets/stylus/components/header.styl
+++ b/assets/stylus/components/header.styl
@@ -65,7 +65,7 @@
   width 40px
   height 40px
   z-index 0
-  display inline-block
+  display block
   #cart-mobile 
     display none
   @media (max-width: 767px)
@@ -73,12 +73,20 @@
       display inline-flex
 
 .Header-menu-button
+  // position relative
+  // top 19px
+  // right 20px
   display none
+  background none
+  outline none
+  border none
+  width 40px
+  height 40px
+  padding 19px 20px 
+  margin 0
   color rgba(0,0,0,0.54)
-  a
-    color rgba(0,0,0,0.54)
   @media (max-width: 767px)
-    display inline-block
+    display block
   
   
 .Header-logo
